# pandora-cli-skills

./: .gitattributes  .gitignore  AGENTS.md  CONTINUITY.md  KEEP_REMOVE_MATRIX.md  README.md  README_FOR_SHARING.md  SKILL.md  package-lock.json  package.json  pandora-market-setup-1.0.0.tgz  tsconfig.json
anthropic-skill-src/: SKILL.md
cli/: pandora.cjs
knowledge-base/: index.md  log.md  overview.md
proving-ground/: README.md  structure.md
references/: checklist.md  contracts.md  creation-script.md  promo-website-research.md
scripts/: .env.example  build_anthropic_skill_bundle.cjs  build_benchmark_publication_bundle.cjs  build_benchmark_publication_manifest.cjs  check_a_plus_scorecard.cjs  check_agent_benchmarks.cjs  check_anthropic_skill_bundle.cjs  check_promo_browser.cjs  check_promo_surface.cjs  check_release_drift.cjs  check_release_trust.cjs  check_repo_hygiene.cjs  check_runtime_local_readiness.cjs  check_secret_scan.cjs  check_skill_docs.cjs  check_standalone_sdk_packages.cjs  claude_skill_executor.cjs  clean_local_artifacts.cjs  clean_sdk_python_cache.cjs  create_market_launcher.ts  create_polymarket_clone_and_bet.ts  generate_agent_contract_sdk.cjs  generate_sbom.cjs  prepare_publish_manifest.cjs  restore_publish_manifest.cjs  run_agent_acceptance.cjs  run_agent_benchmarks.cjs  run_cli_baton_autoresearch.cjs  run_cli_section_autoresearch.cjs  run_overnight_engine.cjs  run_proving_ground_autoresearch.cjs  run_python_sdk_tests.cjs  run_repo_verification.cjs  run_smoke_tests.cjs  run_surface_e2e.cjs  run_unit_tests.cjs  run_user_journey.cjs  update_benchmark_history.cjs
sdk/python/: MANIFEST.in  README.md  pyproject.toml
sdk/python/examples/: local_stdio.py  remote_http.py
sdk/python/pandora_agent/: __init__.py  backends.py  catalog.py  client.py  errors.py  policies.py
sdk/python/tests/: test_backends.py  test_catalog.py  test_client.py  test_policies.py
todos/: 004-ready-p1-combinatorial-arbitrage-detection.md  008-ready-p2-model-calibrate-command.md  009-ready-p2-model-correlation-copula-command.md  016-ready-p0-schema-and-mcp-parity.md  (+91 more)
(+646 files in other folders)
