[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandora-agent"
version = "0.1.0a9"
description = "Standalone Python SDK for Pandora agent discovery, vendored contract access, and MCP execution."
requires-python = ">=3.9"
readme = "README.md"
authors = [{ name = "Pandora CLI Contributors" }]
license = { text = "ISC" }
keywords = ["pandora", "mcp", "sdk", "agent", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/XoAnonXo/pandora-cli-skills/tree/main/sdk/python"
Repository = "https://github.com/XoAnonXo/pandora-cli-skills"
Documentation = "https://github.com/XoAnonXo/pandora-cli-skills/tree/main/sdk/python#readme"
Issues = "https://github.com/XoAnonXo/pandora-cli-skills/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pandora_agent*"]
namespaces = true

[tool.setuptools.package-data]
pandora_agent = ["py.typed", "generated/*.json"]
"pandora_agent.generated" = ["*.json"]
